--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@farcaster/frame-sdk": "^0.0.53",
+    "@vercel/og": "^0.6.8",
     "next": "14.1.0",
     "react": "^18.3",
     "react-dom": "^18.3",
