--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3",
     "react-dom": "^18.3",
     "react-toastify": "^11.0.5",
+    "sharp": "^0.34.2",
     "thirdweb": "^5"
   },
   "devDependencies": {
