--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.53",
+    "@tanstack/react-query": "^5.79.0",
+    "@upstash/redis": "^1.34.9",
     "@vercel/og": "^0.6.8",
     "next": "14.1.0",
     "react": "^18.3",
